# agh-jimp2-exercises

lab1/: CMakeLists.txt
lab1/doublebasepalindromes/: CMakeLists.txt  DoubleBasePalindromes.cpp  DoubleBasePalindromes.h  main.cpp
lab1/factorial/: Factorial.cpp
lab1/palindrome/: Palindrome.cpp  Palindrome.h  main.cpp
lab1/reversestring/: ReverseString.cpp  ReverseString.h  main.cpp
lab10/academiascheduler/: Scheduler.cpp  Scheduler.h  main.cpp
lab10/algotest/: Algo.cpp  Algo.h  CMakeLists.txt  main.cpp
lab11/: CMakeLists.txt
lab12/: CMakeLists.txt
lab12/academiasequentialgenerator/: CMakeLists.txt  SequentialGenerator.cpp  SequentialGenerator.h  main.cpp
lab12/academiateacherhash/: TeacherHash.cpp  TeacherHash.h  main.cpp
lab12/timerecorder/: CMakeLists.txt  TimeRecorder.cpp  TimeRecorder.h  main.cpp
lab12/tree/: CMakeLists.txt  Tree.cpp  Tree.h  TreeIterators.h  main.cpp
lab2/greatestproduct/: CMakeLists.txt  GreatestProduct.cpp  GreatestProduct.h  main.cpp
lab2/polybius/: CMakeLists.txt  Polybius.cpp  Polybius.h  main.cpp
lab2/xorcypherbreaker/: CMakeLists.txt  XorCypherBreaker.cpp  XorCypherBreaker.h  main.cpp
lab3/smarttree/: CMakeLists.txt  SmartTree.cpp  SmartTree.h
lab3/tinyurl/: TinyUrl.cpp  TinyUrl.h  main.cpp
lab4/netsjson/: CMakeLists.txt  SimpleJson.cpp  SimpleJson.h  main.cpp
lab5/matrix/: CMakeLists.txt  (+3 more)
lab6/academia/: CMakeLists.txt  StudentRepository.cpp  StudentRepository.h  main.cpp
lab7/: CMakeLists.txt
lab8/moviesubtitles/: CMakeLists.txt  MovieSubtitles.cpp  MovieSubtitles.h  main.cpp
tests/: CMakeLists.txt
(+39 files in other folders)
